--- a/app/cardcounter/pubspec.yaml
+++ b/app/cardcounter/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  animated_text_kit: ^1.3.1
+  
 
 
 # For information on the generic Dart part of this file, see the
